# savings_vault

./: .task  Anchor.toml
programs/savings_vault/: Cargo.toml
programs/savings_vault/src/: error.rs  lib.rs  utils.rs
programs/savings_vault/src/instructions/: mod.rs
programs/savings_vault/src/instructions/interest_depositor_manager/: add_whitelist.rs  create_interest_depositor_manager.rs  deposit_liquidity_for_interest.rs  mod.rs  remove_whitelist.rs
programs/savings_vault/src/instructions/savings_vault/: accrue_interest.rs  create_savings_vault.rs  deposit_savings_vault.rs  mod.rs  withdraw_savings_vault.rs
programs/savings_vault/src/state/: interest_depositor_manager.rs  mod.rs  savings_vault.rs
tests/: savings_vault.ts
