[package]
name = "savings_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "savings_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.27.0", features = ["token"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
solana-program = "1.14.14"
arrayref = "0.3.6"
solana-frozen-abi-macro = "=1.14.16"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
blake3 = "=1.3.3"
